kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  namespace: game-2048
  name: deployment-2048
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-2048
    replicas: 5
    template:
      metadata:
        labels:
          app.kubernetes.io/name: app-2048
      spec:
        containers:
        -image: public.ecr.aws/l6m2t8p7/docker-2048:latest
         imagePullPolicy: Always
         name: app-2048
         ports:
         - containerPort: 80
