kubernetes/svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: game-2048
  name: service-2048
spec:
  selector:
    app.kubernetes.io/name: app-2048
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: NodePort
